Auto IRC Bot 3.0: Change Log
------------------------------------------------------------------

3.0 Indev
==================================================================
    * Privilege to use a command is now handled by the priv arg of
      cmd_add.
    * HELP now only displays help if the user has the appropriate
      privileges.
    * Updated Core::IRC and all modules to obey the updated API.
    * Deleted shelp from cmd_add, replaced with privilege. Renamed
      fhelp to help.
    * If fantasy HELP is used, only display fantasy commands, if
      private HELP is used, only display private commands.
    * Fixed cmd_add syntax. Correct format: name, level, short help,
      full help, callback.
    * Added core command HELP.
    * Added core command RESTART.
    * Added config option server:autorejoin for rejoining on kick.
    * Added event on_kick.
    * Parse KICK.
    * Added event on_quit.
    * Parse QUIT.
    * Added event on_part.
    * Parse PART.
    * Update chanusers on JOIN.
    * Properly parse NICK and update chanusers.
    * Added --enable-ssl to ./install for the future SSL support.
    * Added chanstatus-based permissions. This works via
      user:chanstatus.
    * Catch __WARN__ and __DIE__, logging to file.
    * Added Spanish translations.
    * Added EightBall module.
    * Rewrote the socket engine. This should fix random timeouts.
    * Added IsItUp module.
    * Added user:net for network-specific user blocks.
    * Bug fix: Fixed broken no-parameter config blocks.
    * Added core command SHUTDOWN.
    * Added core command MODRELOAD.
    * Added core command MODUNLOAD.
    * Added core command MODLOAD.
    * Added Weather module.
    * Added Calc module.
    * Fixed the NAME,VER,SVER,REV,RSTAGE constants.
    * Added a CTCP VERSION reply.
    * Created Core::IRC.
    * Added Bit.ly module.

3.0 Alpha 1
==================================================================
    * Added mod_exists() to API::Std.