@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Added an FML module for retrieving random FML quotes.
     * Privilege to use a command is now handled by the priv arg of
       cmd_add.
     * HELP now only displays help if the user has the appropriate
